# bifrost

./: .bazelignore  .bazelrc  .gitignore  .mermaid  .npmrc  .pre-commit-config.yaml  .slsa-goreleaser.yml  BUG_FIXES_SUMMARY.md  BUILD.bazel  CLAUDE.md  Cargo.toml  DEVICE_DISCOVERY_UPDATE.md  DIAGRAM_TOOLS_ISSUE.md  FORMATTING_SETUP.md  GO_STACK_MIGRATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  MESSAGING_SECURITY_ISSUE.md  MODULE.bazel  Makefile  PHASE_2_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  PROTOCOL_POPULARITY_ANALYSIS.md  PROTOCOL_RESEARCH_METHODOLOGY.md  README.md  RUST_REMOVAL_PLAN.md  SECURITY_TESTING_ISSUE.md  STACK_DECISION.md  STRATEGIC_RECOMMENDATIONS.md  WORKSPACE.bazel  bandit-report.json  bifrost.code-workspace  bifrost_dev_roadmap.md  bifrost_spec.md  biome.json  demo_patterns.json  format-docs.sh  github_issues.md  google_style_examples.py  google_style_pyproject.toml  implementation_plan.md  (+10 more)
cmd/: BUILD.bazel
go-gateway/: .dockerignore  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CLAUDE.md  Dockerfile  Dockerfile.debug  IMPLEMENTATION_SUMMARY.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_DEPLOYMENT_COMPLETE.md  README.md  README_HARDWARE_TESTING.md  TEST_RESULTS.md  WORKSPACE.bazel  comprehensive_test.go  debug_python_read.py  docker-compose.yml  gateway.yaml  go.mod  go.mod.minimal  go.sum  justfile  python_benchmark.py  simple_python_benchmark.py  test_modbus_integration.go
go-gateway/.github/workflows/: ci.yml  performance.yml
go-gateway/backup/: backup-script.sh  restore-script.sh
go-gateway/cmd/docs-generator/: main.go
go-gateway/cmd/gateway/: BUILD.bazel  main.go
go-gateway/cmd/hardware_test/: main.go
go-gateway/cmd/performance_test/: BUILD.bazel  main.go
go-gateway/cmd/release_card/: main.go
go-gateway/configs/: hardware_test_lab.yaml  test_scenarios.yaml
go-gateway/deployment/edge/: docker-compose.edge.yml  install.sh
go-gateway/docs/: ETHERNETIP_GUIDE.md  HARDWARE_TESTING_FRAMEWORK.md  MESSAGING_SECURITY_GUIDE.md  OPCUA_IMPLEMENTATION.md  SECURITY_FRAMEWORK.md  cloud-connectors.md  cloud-integration-test.md
go-gateway/docs/runbooks/: incident-response.md  performance-monitoring.md  production-deployment.md
go-gateway/examples/: ethernetip_demo.go  messaging_security_demo.go  opcua_demo.go  performance_demo.go
go-gateway/examples/cloud-example/: main.go
go-gateway/examples/ethernetip/: main.go
go-gateway/internal/cloud/: buffer.go  cloud_test.go  connector.go  health.go  manager.go  retry.go
go-gateway/internal/gateway/: BUILD.bazel  gateway_fuzz_test.go  metrics_prometheus.go  metrics_simple.go  server.go
go-gateway/internal/hardware/: executor.go  hardware_test.go  manager.go  registry.go  scheduler.go
go-gateway/internal/logging/: simple.go  zap_compat.go
go-gateway/internal/messaging/: interface.go  messaging_test.go  mqtt.go  mqtt_topics.go  nats.go  nats_topics.go
go-gateway/internal/metrics/: simple.go
go-gateway/internal/performance/: BUILD.bazel  batch_processor.go  benchmark_suite.go  connection_pool.go  edge_optimizer.go  memory_optimizer.go  monitoring.go  optimized_gateway.go  profiler.go
go-gateway/internal/protocols/: BUILD.bazel  error_handling_test.go  ethernetip.go  ethernetip_cip.go  ethernetip_errors.go  ethernetip_performance.go  ethernetip_test.go  modbus.go  modbus_fuzz_test.go  modbus_test.go  opcua.go  opcua_fuzz_test.go  opcua_test.go  performance_test.go  protocol.go
go-gateway/internal/release/: README.md  automation.go  benchmark_integration.go  card.go  card_test.go  storage.go  trend_analysis.go
go-gateway/internal/resilience/: circuitbreaker.go
go-gateway/internal/security/: audit.go  auth.go  crypto.go  crypto_test.go  integration_test.go  security.go  security_test.go  tls.go
go-gateway/k8s/: configmap.yaml  cronjob-backup.yaml  deployment.yaml  hpa.yaml  monitoring.yaml  namespace.yaml  redis.yaml  security-policies.yaml  service.yaml
go-gateway/monitoring/: alert.rules.yml  alertmanager.yml  filebeat.yml  prometheus.yml
go-gateway/protocol-matrix/: .github-workflows-example.yml  INTEGRATION.md  README.md  go.mod  protocol_matrix.yaml
go-gateway/protocol-matrix/schema/: protocol_matrix_schema.yaml
go-gateway/protocol-matrix/status/: matrix_status.yaml  report.html  report.json
go-gateway/security/: generate-certs.sh  security-checklist.md
go-gateway/test-framework/: fuzzing.go  performance.go  protocol_simulators.go
gui/: BUILD.bazel  notes.md  performance_guidelines.md
gui/backend/: BUILD.bazel  main.py
gui/frontend/: BUILD.bazel  index.html  package.json
gui/frontend/src/: App.js  index.js
internal/gateway/: BUILD.bazel  server.go
pkg/api/: BUILD.bazel
tools/python/: BUILD.bazel
tools/rust/: BUILD.bazel
vscode-extension/: .gitignore  .vscodeignore  BUILD.bazel  LADDER_LOGIC_ISSUE.md  PERFORMANCE.md  README.md  TESTING.md  benchmark-results.json  jest.config.js  package-lock.json  package.json  performance-comparison-results.json  pnpm-lock.yaml  tsconfig.json
vscode-extension/media/: ladderLogic.css  ladderLogic.js  monitor.css  monitor.js  reset.css  vscode.css
vscode-extension/scripts/: benchmark-compilation.js  check-typescript-go.js  performance-comparison.js
vscode-extension/src/: extension.js  extension.js.map  extension.ts
vscode-extension/src/api/: bifrostAPI.d.ts  bifrostAPI.js  bifrostAPI.js.map  bifrostAPI.ts
vscode-extension/src/commands/: commandHandler.d.ts  commandHandler.js  commandHandler.js.map  commandHandler.ts
vscode-extension/src/panels/: ladderLogicPanel.ts  monitorPanel.d.ts  monitorPanel.js  monitorPanel.js.map  monitorPanel.ts
vscode-extension/src/performance/: batchUpdateManager.d.ts  batchUpdateManager.js  batchUpdateManager.js.map  batchUpdateManager.ts  connectionPool.d.ts  connectionPool.js  connectionPool.js.map  connectionPool.ts  dataBuffer.d.ts  dataBuffer.js  dataBuffer.js.map  dataBuffer.ts  virtualTreeProvider.d.ts  virtualTreeProvider.js  virtualTreeProvider.js.map  virtualTreeProvider.ts
vscode-extension/src/providers/: dataPointProvider.d.ts  dataPointProvider.js  (+10 more)
(+204 files in other folders)
