# This is the main Bazel workspace file.
# It defines the root of the workspace and declares external dependencies.

# Load the Bzlmod extension
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Use Bzlmod for dependency management
# For rules_python
# For rules_rust

http_archive(
    name = "pyo3",
    sha256 = "a02a88a17e74cadbc8ce77855e1d6c8ad0ab82901a4a9b5046bd01c1c0bd95cd",
    strip_prefix = "pyo3-0.21.0",
    urls = ["https://crates.io/api/v1/crates/pyo3/0.21.0/download"],
)

http_archive(
    name = "pyo3_macros",
    sha256 = "4e80493c5965f94a747d0782a607b2328a4eea5391327b152b00e2f3b001cede",
    strip_prefix = "pyo3-macros-0.21.0",
    urls = ["https://crates.io/api/v1/crates/pyo3-macros/0.21.0/download"],
)

http_archive(
    name = "tokio",
    sha256 = "ba4f4a02a7a80d6f274636f0aa95c7e383b912d41fe721a31f29e29698585a4a",
    strip_prefix = "tokio-1.38.0",
    urls = ["https://crates.io/api/v1/crates/tokio/1.38.0/download"],
)

# Example of how to fetch rules if not using Bzlmod (for reference, not active)
git_repository(
    name = "rules_python",
    remote = "https://github.com/bazelbuild/rules_python.git",
    tag = "0.31.0", # Use a specific tag or commit hash
)
git_repository(
    name = "rules_rust",
    remote = "https://github.com/bazelbuild/rules_rust.git",
    tag = "0.40.0", # Use a specific tag or commit hash
)

# Configure toolchain resolution (if needed for specific toolchains)
# toolchain_resolution(
#     python_toolchains = ["@rules_python//python/toolchains:current_py_toolchain"],
#     rust_toolchains = ["@rules_rust//rust/toolchains:current_rust_toolchain"],
# )
