# Gateway main package BUILD file
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bifrost/go-gateway/cmd/gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//go-gateway/internal/gateway:go_default_library",
        "//go-gateway/internal/protocols:go_default_library",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
        "@in_gopkg_yaml_v3//:yaml_v3",
        # "//go-gateway/pkg/api",  # Empty for now
    ],
)

go_binary(
    name = "gateway",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
