# Bifrost Gateway Root BUILD file
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = glob(["*.go"]),
    importpath = "github.com/bifrost/go-gateway",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gateway",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

# Alias for the main binary
alias(
    name = "bifrost-gateway",
    actual = ":gateway",
    visibility = ["//visibility:public"],
)
