load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "vscode_extension",
    srcs = glob([
        "src/**/*.ts",
    ]),
    declaration = True,
    tsconfig = "tsconfig.json",
    transpiler = "tsc",
    deps = [
        ":node_modules/@types/node",
        ":node_modules/@types/vscode",
        ":node_modules/chart.js",
        ":node_modules/date-fns",
    ],
)

js_library(
    name = "extension",
    srcs = [":vscode_extension"],
    visibility = ["//visibility:public"],
)