# Gateway package BUILD file
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
    ],
    importpath = "github.com/bifrost/go-gateway/internal/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//go-gateway/internal/protocols:go_default_library",
        "//go-gateway/internal/performance:go_default_library",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_uber_go_zap//:zap",
    ],
)

alias(
    name = "gateway",
    actual = ":go_default_library",
    visibility = ["//visibility:public"],
)