
# This file defines the Python toolchain and dependencies.

load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "pypi",
    requirements_lock = "//:requirements_lock.txt",
    python_version = "3.13",
)

# Define a Python toolchain for Bazel to use
load("@rules_python//python:toolchains.bzl", "py_runtime_pair")

py_runtime_pair(
    name = "python_3_13_runtime",
    python3_runtime = "@pypi//:", # This points to the pip_parse generated runtime
)

toolchain(
    name = "python_3_13_toolchain",
    toolchain_type = "@rules_python//python:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//os:macos",
        "@platforms//os:windows",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//os:macos",
        "@platforms//os:windows",
    ],
    toolchain = ":python_3_13_runtime",
)
