# Performance test package BUILD file
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bifrost/go-gateway/cmd/performance_test",
    visibility = ["//visibility:private"],
    deps = [
        "//go-gateway/internal/gateway:go_default_library",
        "//go-gateway/internal/protocols:go_default_library",
        "//go-gateway/internal/performance:go_default_library",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_binary(
    name = "performance_test",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)