# Protocols package BUILD file
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ethernetip.go",
        "ethernetip_cip.go",
        "ethernetip_errors.go",
        "ethernetip_performance.go",
        "modbus.go",
        "opcua.go",
        "protocol.go",
    ],
    importpath = "github.com/bifrost/go-gateway/internal/protocols",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_goburrow_modbus//:modbus",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "ethernetip_test.go",
        "modbus_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//:zap",
    ],
)
